--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -11,8 +11,8 @@
         style="@style/Widget.AppCompat.Button.Borderless.Colored"
         android:layout_width="wrap_content"
         android:layout_height="48dp"
-        android:layout_marginTop="48dp"
         android:text="Entrar"
+        app:layout_constraintBottom_toTopOf="@+id/cadastrarLogin"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/senhaLogin" />
@@ -21,12 +21,10 @@
         android:id="@+id/emailLogin"
         android:layout_width="wrap_content"
         android:layout_height="46dp"
-        android:layout_marginEnd="84dp"
-        android:layout_marginStart="85dp"
-        android:layout_marginTop="50dp"
         android:ems="10"
         android:hint="E-mail"
         android:inputType="textEmailAddress"
+        app:layout_constraintBottom_toTopOf="@+id/senhaLogin"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -35,10 +33,10 @@
         android:id="@+id/senhaLogin"
         android:layout_width="wrap_content"
         android:layout_height="46dp"
-        android:layout_marginTop="50dp"
         android:ems="10"
         android:hint="Senha"
         android:inputType="textPassword"
+        app:layout_constraintBottom_toTopOf="@+id/entrarLogin"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/emailLogin" />
@@ -47,10 +45,10 @@
         android:id="@+id/cadastrarLogin"
         style="@style/Widget.AppCompat.Button.Borderless.Colored"
         android:layout_width="wrap_content"
-        android:layout_height="48dp"
-        android:layout_marginTop="28dp"
+        android:layout_height="wrap_content"
         android:onClick="abrirCadastro"
         android:text="Cadastre-se"
+        app:layout_constraintBottom_toTopOf="@+id/progressBarLogin"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/entrarLogin" />
@@ -60,8 +58,8 @@
         style="?android:attr/progressBarStyle"
         android:layout_width="wrap_content"
         android:layout_height="48dp"
-        android:layout_marginTop="31dp"
         android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cadastrarLogin" />
